Fix Java 21 deprecations